--- a/MUP-RR/MUP-RR/Views/Home/Interface.cshtml
+++ b/MUP-RR/MUP-RR/Views/Home/Interface.cshtml
@@ -1,26 +1,62 @@
 @{
     ViewData["Title"] = "Interface";
 }
-<h1>@ViewData["Title"]</h1>
+<style>
+    .my-custom-scrollbar {
+    position: relative;
+    height: 500px;
+    overflow: auto;
+    }
+    .table-wrapper-scroll-y {
+    display: block;
+    }
+</style>
+<script>
+    function DeleteRule(id) {
+        var c = confirm("Are You Sure You Want To Delete This Entry?");
+        if (c==true){
+            var url ="/Home/DeleteRule/"+id;
+            $.get(url);
+            
+        }
+        
+    }
 
-<p><table style="width:100%">
+  
+        
+        
+</script>
+
+
+<div class="table-wrapper-scroll-y my-custom-scrollbar">
+    <h4>Manager of User Permissions Rules</h4>
+    <button onclick="@("window.location.href='" + @Url.Action("AddRule", "Home") + "'");">Add Rule</button>
+    <table class="table table-bordered table-striped mb-0">
         <tr>
-            <th>Id</th>
-            <th>Profile</th>
-            <th>Classroom Group</th>
-            <th>Unidade Orgânica</th>
-            <th>Vínculo</th>
+            <th scope="col">Vínculo</th>
+            <th scope="col">Unidade Orgânica</th>
+            <th scope="col">Classroom Group</th>
+            <th scope="col">Profile</th>
+            <th scope="col">#</th>
+            
         </tr> 
         @foreach (var item in ViewData["MUP-Table"] as List<Tuple<int,string, string, string, string>>)
             {
                 <tr>
-            <th>@item.Item1</th>
-            <th>@item.Item2</th>
-            <th>@item.Item3</th>
-            <th>@item.Item4</th>
-            <th>@item.Item5</th>
-            </tr>
+                    <th>@item.Item5</th>
+                    <th>@item.Item4.ToUpper()</th>
+                    <th>@item.Item3</th>
+                    <th>@item.Item2</th>
+                    <th>
+                        @using(Html.BeginForm("DeleteRule", "Home", FormMethod.Post)){
+                            @Html.Hidden("id", (int) item.Item1)
+                            <input type="submit" value="Delete" onclick="return confirm('Are you sure?')">
+                        }</th>
+                    
+                </tr>
             }
         
         
-        </table></p>
+    </table>
+</div>
+<p></p>
