--- a/MUP-RR/MUP-RR/Views/Shared/_Layout.cshtml
+++ b/MUP-RR/MUP-RR/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Interface">MUP-RR</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="InfoPage">Information</a>
+                        </li>
                     </ul>
                 </div>
             </div>
