Correct layout name

--- a/MUP-RR/MUP-RR/Views/Error/NoPermissions.cshtml
+++ b/MUP-RR/MUP-RR/Views/Error/NoPermissions.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Sem Autorização";
-    Layout = "_3ColsLayout";
+    Layout = "_Layout";
 }
 
 <p>Não tem permissões para aceder a esta página.</p>
