--- a/MUP-RR/MUP-RR/Views/Shared/_Layout.cshtml
+++ b/MUP-RR/MUP-RR/Views/Shared/_Layout.cshtml
@@ -18,21 +18,24 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Profiles" asp-action="Index">MUP-RR</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Information" asp-action="Index">Information</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="session">
-                    @{ var session = new MUP_RR.Helpers.Session(Context.Session);
+                @{ var session = new MUP_RR.Helpers.Session(Context.Session);
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            @if (session.SessionActive)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Profiles" asp-action="Index">MUP-RR</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Information" asp-action="Index">Information</a>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                    <div class="session">
 
                         @if (session.SessionActive)
                         {
@@ -44,8 +47,9 @@
                         {
                             <a asp-controller="Secure" asp-action="Index">Entrar <i class="user icon"></i></a>
                         }
-                    }
-                </div>
+
+                    </div>
+                }
             </div>
         </nav>
     </header>
